examples/test/testpolicy18871.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18871
  namespace: namespace230
spec:
  podSelector:
    matchLabels:
      key32: value27
      key14: value9
      key7: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value34
          key15: value26
      podSelector:
        matchLabels:
          key8: value22
